@@ -3,13 +3,14 @@
 ##
 
 %common
-    MODULE_NAMES="db lua file xar xz pcre"
+    MODULE_NAMES="db lua file xar xz pcre syck"
     MODULE_TAG_DB="rpm-5_1"
     MODULE_TAG_LUA="rpm-5_1"
     MODULE_TAG_FILE="rpm-5_1"
     MODULE_TAG_XAR="rpm-5_1"
     MODULE_TAG_XZ="rpm-5_1"
     MODULE_TAG_PCRE="rpm-5_1"
+    MODULE_TAG_SYCK="rpm-5_1"
 
 %checkout
     for name in $MODULE_NAMES "$@"; do
@@ -76,6 +77,7 @@
         --with-file=internal \
         --with-lua=internal \
         --with-sqlite=external \
+        --with-syck=internal \
         --with-beecrypt=external \
         --with-openssl=external \
         --with-nss=external \
